# rag-one

./: .env.example  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  EXAMPLES.md  IMPLEMENTATION_REPORT.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  README_DETAILED.md  pyproject.toml  requirements.txt  run_cli.sh  run_web.sh  setup.sh  test_structure.py  verify_setup.py
data/documents/: sample_doc1.txt  sample_doc2.txt
src/: __init__.py  app.py  cli.py  config.py  conversation_memory.py  document_processor.py  fix_sqlite.py  rag_engine.py  web_ui.py
